scripts/nullaway/nullgtn/url054c08669f_jules2689_CSI4124_tgz-pJ8-SMThemeParkExperi3J8.txt
../nullgtn/url054c08669f_jules2689_CSI4124_tgz-pJ8-SMThemeParkExperi3J8/src/simModel/SMThemePark.java:62: error: [NullAway] initializer method does not guarantee @NonNull field rcgTrains (line 39) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public SMThemePark(double t0time, double tftime, int nTrains, int nCars, int boardingOption, boolean fixBoardingTime, Seeds sd, boolean traceFlag) {
           ^
    (see http://t.uber.com/nullaway )
../nullgtn/url054c08669f_jules2689_CSI4124_tgz-pJ8-SMThemeParkExperi3J8/src/simModel/SMThemePark.java:106: error: [NullAway] initializer method does not guarantee @NonNull fields rcgTrains (line 39), rvp (line 45) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public SMThemePark() {
           ^
    (see http://t.uber.com/nullaway )
../nullgtn/url054c08669f_jules2689_CSI4124_tgz-pJ8-SMThemeParkExperi3J8/src/simModel/Tracks.java:18: error: [NullAway] returning @Nullable expression from method with @NonNull return type
            return null;
            ^
    (see http://t.uber.com/nullaway )
../nullgtn/url054c08669f_jules2689_CSI4124_tgz-pJ8-SMThemeParkExperi3J8/src/simModel/Trains.java:20: error: [NullAway] initializer method does not guarantee @NonNull field status (line 18) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Trains(int numCars, int numStations) {
           ^
    (see http://t.uber.com/nullaway )
../nullgtn/url054c08669f_jules2689_CSI4124_tgz-pJ8-SMThemeParkExperi3J8/src/simModel/TravellingBetweenStations.java:13: error: [NullAway] initializer method does not guarantee @NonNull field train (line 11) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public TravellingBetweenStations(SMThemePark model, int id) {
           ^
    (see http://t.uber.com/nullaway )
5 errors
